# __telestall

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  build.rs  config.toml.enc  credentials.json.enc  fly.toml
.github/workflows/: fly.yml
crates/tables/: Cargo.toml
crates/tables/src/: cache.rs  clock.rs  fork.rs  in_mem.rs  index.rs  lib.rs  search.rs
crates/tables/src/google_sheets/: mod.rs  range.rs
crates/tables/src/google_sheets/serde_impl/: de.rs  error.rs  mod.rs  ser.rs
crates/tables_v2/: Cargo.toml
crates/tables_v2/src/: lib.rs
scripts/: fly_deploy.sh
src/: callbacks.rs  commands.rs  common.rs  config.rs  main.rs  warehouse.rs
src/dialogues/: mod.rs  stages.rs
src/dialogues/particular/: mod.rs  order_specify_price.rs  redeem.rs  replenish.rs  sell.rs  writeoff.rs
src/dialogues/particular/purchase/: invoice.rs  mod.rs
src/entries/: currency.rs  mod.rs
src/entries/serde_fn/: chat_id.rs  datetime.rs  list.rs  mod.rs  specs.rs
src/inline/: items.rs  mod.rs  orders.rs  products.rs  replenish_products.rs  sell_products.rs
src/utils/: mod.rs  payload.rs  row.rs
src/utils/verify/: item.rs  mod.rs  order.rs  payload.rs  product.rs  sale.rs  user.rs  user_meta.rs
