[package]
name = "tables"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "^1.8", features = ["rt-multi-thread", "macros"] }
log = "^0.4"
chrono = "^0.4"
async-trait = "^0.1"
google-sheets4 = "^5.0"
serde = { version = "^1.0" }
serde_json = "^1.0"
lazy_static = "^1.4"
regex = "^1.9"
pretty-type-name = "^1.0"
